<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/ic_logo"
            style="@style/Logo" />

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_large"
            android:visibility="gone"
            style="?android:attr/progressBarStyleLarge" />

        <LinearLayout
            android:id="@+id/login_form"
            style="@style/FormLayout">

            <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

                <EditText
                    android:id="@+id/username"
                    android:hint="@string/prompt_username"
                    style="@style/Input.Username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/TextInputLayout">

                <EditText
                    android:id="@+id/password"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_login"
                    android:imeOptions="actionGo"
                    style="@style/Input.Password" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:text="@string/action_login"
                style="@style/Button.Action" />

            <Button
                android:id="@+id/register_button"
                android:text="@string/action_register"
                style="@style/Button.SubAction" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
