<resources>
    <string name="app_name">Voiperinho</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Voiperinho</string>

    <!-- Login and Registration -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
...
